--- a/ITOneRelatorioDemonstracao.csproj
+++ b/ITOneRelatorioDemonstracao.csproj
@@ -77,6 +77,7 @@
     <Compile Include="ConfigXML.cs" />
     <Compile Include="DataBaseFunctions.cs" />
     <Compile Include="Dialogs.cs" />
+    <Compile Include="Enums.cs" />
     <Compile Include="GrupoConta.cs" />
     <Compile Include="GrupoContaFolha.cs" />
     <Compile Include="Program.cs" />
